[workspace]
resolver = "2"
members = ["cli", "crates/core", "crates/provider", "crates/primitives"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/HerodotusDev/hdp"

[workspace.dependencies]
hdp-core = { version = "0.2.0", path = "crates/core" }
hdp-primitives = { version = "0.2.0", path = "crates/primitives" }
hdp-provider = { version = "0.2.0", path = "crates/provider" }
tokio = { version = "1", features = ["full"] }
tempfile = "3.10.1"
alloy-merkle-tree = { version = "0.6.0" }
alloy-rpc-client = { version = "0.1.1" }
alloy = { version = "0.1.1", features = ["full"] }
alloy-rlp = { version = "0.3.5", features = ["derive"] }
anyhow = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.3.2"
serde_json = "1.0"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8.4"
regex = "1"
starknet = "0.10.0"
starknet-crypto = "0.6.1"
cairo-lang-starknet-classes = "2.6.3"
futures = "0.3.30"
lazy_static = "1.4.0"
thiserror = "1.0"
eth-trie-proofs = "0.1.0"
