[workspace]
resolver = "2"
members = ["cli", "examples/private-input-module", "hdp"]

[workspace.package]
edition = "2021"
version = "0.7.0"
license-file = "LICENSE"
authors = ["Pia <pia@herodotus.dev>"]
repository = "https://github.com/HerodotusDev/hdp"
homepage = "https://herodotus.dev/"
exclude = ["benches/", "fixtures/", "examples/"]
keywords = ["blockchain", "ethereum", "rust", "data-processor", "storage-proof"]
categories = [
    "command-line-interface",
    "cryptography::cryptocurrencies",
    "compilers",
    "asynchronous",
]

[workspace.dependencies]
hdp = { path = "hdp" }
hdp-cli = { path = "cli" }
tokio = { version = "1", features = ["full"] }
tempfile = "3.10.1"
alloy-merkle-tree = { version = "0.7.1" }
alloy = { version = "0.4.2", features = ["full"] }
alloy-rlp = { version = "0.3.8", features = ["derive"] }
anyhow = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.3.2"
serde_json = "1.0"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8.4"
regex = "1"
starknet = "0.11.0"
starknet-crypto = "0.7.1"
starknet-types-core = "0.1.5"
cairo-lang-starknet-classes = "2.7.0"
cairo-vm = "1.0.0-rc6"
futures = "0.3.30"
lazy_static = "1.4.0"
thiserror = "1.0"
sn-trie-proofs = { version = "0.1.0", git = "https://github.com/HerodotusDev/trie-proofs.git" }
eth-trie-proofs = "0.1.2"
itertools = "0.10"
