[package]
name = "hdp-cli"
description = "Interactive Herodotus Data Processor via CLI"
edition.workspace = true
license-file.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "../README.md"


[[bin]]
name = "hdp"
path = "src/main.rs"

[dependencies]
hdp-preprocessor = { workspace = true }
hdp-core = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
hdp-provider = { workspace = true }
hdp-primitives = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.4.4", features = ["derive"] }
dotenv = "0.15.0"
tracing-subscriber = "0.3.0"
inquire = "0.7.4"
alloy = { workspace = true }
