[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-dyn-abi = { workspace = true }
anyhow = { workspace = true }
reth-primitives = { workspace = true }
num-traits = { workspace = true }
num-bigint = { workspace = true }
fetcher = { workspace = true }
