[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-dyn-abi = { workspace = true }
anyhow = { workspace = true }
reth-primitives = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.30"
starknet = "0.9.0"
