[package]
name = "hdp-compiler"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdp-primitives.workspace = true
serde.workspace = true
alloy-primitives.workspace = true
anyhow.workspace = true
hdp-provider.workspace = true
tokio.workspace = true
alloy-rlp.workspace = true
