[package]
name = "core-new"
version.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdp-primitives.workspace = true
anyhow.workspace = true
tracing.workspace = true
tempfile.workspace = true
regex.workspace = true
