[package]
name = "core-new"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdp-primitives.workspace = true
alloy-primitives = { workspace = true, features = ["rlp", "serde"] }
alloy-dyn-abi = { workspace = true }
hdp-provider.workspace = true
alloy-merkle-tree = { workspace = true }
anyhow.workspace = true
tracing.workspace = true
tempfile.workspace = true
regex.workspace = true
starknet.workspace = true
serde_json.workspace = true
starknet-crypto.workspace = true
serde.workspace = true
cairo-lang-starknet-classes.workspace = true
tokio.workspace = true
futures.workspace = true
lazy_static.workspace = true
serde_with.workspace = true
