[package]
name = "hdp-core"
description = "HDP core implementation"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
hdp-provider = { workspace = true }
hdp-primitives = { workspace = true }
alloy-primitives = { workspace = true }
alloy-merkle-tree = { workspace = true }
alloy-dyn-abi = { workspace = true }
anyhow = { workspace = true }
cairo-lang-starknet-classes.workspace = true
starknet-crypto.workspace = true
starknet.workspace = true
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tracing.workspace = true
lazy_static.workspace = true
regex.workspace = true
tempfile.workspace = true
futures.workspace = true
