[package]
name = "evaluator"
version = "0.1.0"
edition = "2021"

[dependencies]

common = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
alloy-merkle-tree = { workspace = true }
alloy-primitives = { workspace = true }
alloy-dyn-abi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
