[package]
name = "hdp-preprocessor"
description = "HDP preprocessor"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hdp-provider = { workspace = true }
hdp-primitives = { workspace = true }
hdp-cairo-runner = { workspace = true }
alloy-merkle-tree = { workspace = true }
alloy = { workspace = true }
anyhow = { workspace = true }
cairo-lang-starknet-classes.workspace = true
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
starknet = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starknet-crypto = { workspace = true }
reqwest = { version = "0.11", features = ["blocking", "json"] }
lazy_static = { workspace = true }
