[package]
name = "hdp-primitives"
description = "HDP primitives"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
version.workspace = true
exclude.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
alloy = { workspace = true }
alloy-rlp = { workspace = true }
alloy-merkle-tree = { workspace = true }
eth-trie-proofs.workspace = true
rand = { workspace = true }
starknet-crypto.workspace = true
starknet.workspace = true
cairo-lang-starknet-classes.workspace = true
serde_with.workspace = true
serde_json = { workspace = true }
