[package]
name = "hdp-processor"
description = "HDP processor"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy = { workspace = true }
alloy-merkle-tree = { workspace = true }
anyhow = { workspace = true }
hdp-primitives = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hdp-cairo-runner = { workspace = true }
tracing = { workspace = true }
