[package]
name = "hdp-provider"
description = "HDP providers"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde_json.workspace = true
hdp-primitives.workspace = true
alloy-primitives.workspace = true
tokio.workspace = true
tracing.workspace = true

futures = "0.3.30"
# TODO: ideally should be public
eth-trie-proofs = { path = "../../../eth-trie-proofs", version = "0.1.0" }
