[package]
name = "hdp-provider"
description = "HDP providers"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
version.workspace = true
exclude.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde_json.workspace = true
hdp-primitives.workspace = true
tokio.workspace = true
tracing.workspace = true
eth-trie-proofs.workspace = true
futures.workspace = true
thiserror.workspace = true
alloy.workspace = true
itertools.workspace = true

[dev-dependencies]
criterion = { version = "0.4", features = [
    "async",
    "async_futures",
    "html_reports",
] }

[[bench]]
name = "provider_benchmark"
harness = false
